--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <title>London - HR Tech World</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/custom.css">
   <script src="https://use.fontawesome.com/48304ba340.js"></script>
 </head>
 
